[package]
name = "dbd-escape-chance-calculator"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0.41"
iced = { version = "0.3.0", features = [ "tokio", "image" ] }
image = { version = "0.24.3", default-features = false, features = [ "gif" ] }
num = "0.4.0"

[patch.crates-io]
# Get wgpu 0.9.x + update winit
iced = { git = "https://github.com/hecrj/iced", rev = "06d0158efbaadc5ae0a6dea22e7a761a3e1c2a8f" }
iced_futures = { git = "https://github.com/hecrj/iced", rev = "06d0158efbaadc5ae0a6dea22e7a761a3e1c2a8f" }
iced_native = { git = "https://github.com/hecrj/iced", rev = "06d0158efbaadc5ae0a6dea22e7a761a3e1c2a8f" }
iced_graphics = { git = "https://github.com/hecrj/iced", rev = "06d0158efbaadc5ae0a6dea22e7a761a3e1c2a8f" }
iced_style = { git = "https://github.com/hecrj/iced", rev = "06d0158efbaadc5ae0a6dea22e7a761a3e1c2a8f" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
